--- a/style.css
+++ b/style.css
@@ -1,41 +1,105 @@
 html, body {
-    background-color: #777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: '#777';
-    background: '#777';
+    background-color: '#777';
     width: '960px';
     font-size: '18px';
+    text-align: center;
 }
 
 .box-set {
-    background-color: white;
-    border: 2px solid red;  
-    section: 495px;
+    background-color: #777;
 }
 
-h1 {    
+h1 h2 h3 p {    
     color: '#777';
+    width: 495px;
     background: '#ebebeb';
+    text-align: center;
 }
 
 .Box-Header {
+    position: relative;
+    background: white;
+    width: 100%;   
+    padding: 25px;
+    margin: 25px;
     border: 2px solid red;
+    text-align: center;
 }
 
 .Box-Nav {
+    background: white;
+    width: 100%;   
+    padding: 25px;
+    margin: 25px;
     border: 2px solid red;
+    text-align: center;
 }
 
 .Box-Aside {
+    background: white;
+    width: 495px;   
+    height: 300px;
+    padding: 25px;
+    margin: 25px;
     border: 2px solid red;
     color: '#ebebeb';
     background: '#777';
+    text-align: center;
+    float: right;
 }
 
 .Box-Section {
+    background: white;
+    position: relative;
+    float: left;
+    width: 495px;  
+    height: 300px;
+    padding: 25px;
+    margin: 25px;
     border: 2px solid red;
+    text-align: center;
 }
 
 .Box-Article {
+    position: absolute;
+    float: bottom;
+    color: white;
+    width: 300px;   
+    height: 200px;
+    padding: 25px;
+    margin: 25px;
+    background: #777;
     border: 2px solid red;
+    text-align: center;
+}
+
+.Box-H123 {
+    background: white;
+    position: absolute;
+    float: left;
+    width: 300px;   
+    padding: 25px;
+    margin: 25px;
+    border: 2px solid red;
+    text-align: center;
+}
+
+.Box-P {
+    background: white;
+    position: absolute;
+    width: 300px;   
+    padding: 25px;
+    margin: 25px;
+    border: 2px solid red;
+    text-align: center;
+}
+.Box-Footer {
+    background: white;
+    clear: both;
+    width: 100%;   
+    padding: 25px;
+    margin: 25px;
+    border: 2px solid red;
+    text-align: center;
 }
