--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ h1 h2 h3 p {
     width: 90%;   
     padding: 2%;
     margin: 2%;
-    border: 2px solid black;
     text-align: center;
 }
 
@@ -52,32 +51,30 @@ h1 h2 h3 p {
     width: 90%;   
     padding: 2%;
     margin: 2%;
-    border: 2px solid black;
     text-align: center;
 }
 
 .Box-Aside {
-    background: white;
-    width: 495px;   
-    height: 300px;
-    padding: 25px;
-    margin: 25px;
-    border: 2px solid black;
     color: #777;
+    background: white;
+    width: 417px;   
+    height: 322px;
+    padding: 25px;
+    margin: 171px 40px 25px 25px;
     text-align: center;
     float: right;
 }
 
 .Box-Section {
+    position: relative;
+    top: 0;
     background: white;
     color: #777;
-    position: relative;
     float: left;
-    width: 495px;  
-    height: 300px;
+    width: 454px;  
+    height: 322px;
     padding: 25px;
-    margin: 25px;
-    border: 2px solid black;
+    margin: 171px 25px 25px 22px;
     text-align: center;
 }
 
@@ -85,12 +82,11 @@ h1 h2 h3 p {
     position: absolute;
     float: bottom;
     color: white;
-    width: 300px;   
+    width: 375px;   
     height: 200px;
     padding: 25px;
     margin: 25px;
     background: #777;
-    border: 2px solid black;
     text-align: center;
 }
 
@@ -101,7 +97,6 @@ h1 h2 h3 p {
     width: 300px;   
     padding: 25px;
     margin: 25px;
-    border: 2px solid black;
     text-align: center;
 }
 
@@ -111,8 +106,8 @@ h1 h2 h3 p {
     color: #777;
     width: 300px;   
     padding: 25px;
+    position: absolute;
     margin: 25px;
-    border: 2px solid black;
     text-align: center;
 }
 .Box-Footer {
@@ -124,6 +119,5 @@ h1 h2 h3 p {
     width: 90%;   
     padding: 2%;
     margin: 2%;
-    border: 2px solid black;
     text-align: center;
 }
