--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     width: 960px;
     font-size: 18px;
     text-align: center;
+    display: block;
 }
 
 .container {
@@ -34,33 +35,35 @@ h1 h2 h3 p {
     position: fixed;
     top: 0;
     background: white;
+    height: 57px;
     color: #777;
     clear: both;
-    width: 90%;   
-    padding: 2%;
+    width: 1260px;   
+    padding: 1%;
     margin: 2%;
     text-align: center;
 }
 
 .Box-Nav {
     position: fixed;
-    top: 75px;
+    top: 91px;
     background: white;
     color: #777;
     clear: both;
-    width: 90%;   
+    width: 90%;  
+    height: 40px; 
     padding: 2%;
-    margin: 2%;
+    margin: 26px;
     text-align: center;
 }
 
 .Box-Aside {
     color: #777;
     background: white;
-    width: 417px;   
-    height: 322px;
+    width: 461px;   
+    height: 311px;
     padding: 25px;
-    margin: 171px 40px 25px 25px;
+    margin: 218px 58px 25px 25px;
     text-align: center;
     float: right;
 }
@@ -71,19 +74,20 @@ h1 h2 h3 p {
     background: white;
     color: #777;
     float: left;
-    width: 454px;  
-    height: 322px;
+    width: 677px;  
+    height: 311px;
     padding: 25px;
-    margin: 171px 25px 25px 22px;
+    margin: 218px 25px 25px 26px;
     text-align: center;
 }
 
 .Box-Article {
     position: absolute;
-    float: bottom;
+    top: 62px;
+    left: 3px;
     color: white;
-    width: 375px;   
-    height: 200px;
+    width: 609px;   
+    height: 205px;
     padding: 25px;
     margin: 25px;
     background: #777;
@@ -94,20 +98,20 @@ h1 h2 h3 p {
     position: absolute;
     background: white;
     color: #777;
-    width: 300px;   
+    width: 537px;   
     padding: 25px;
-    margin: 25px;
+    margin: 40px 25px 25px -2px;
     text-align: center;
 }
 
 #Box-P {
-    bottom: 10px;
+    bottom: 0px;
     background: white;
     color: #777;
-    width: 300px;   
+    width: 537px;   
     padding: 25px;
     position: absolute;
-    margin: 25px;
+    margin: 40px 25px 25px -2px;
     text-align: center;
 }
 .Box-Footer {
@@ -116,7 +120,8 @@ h1 h2 h3 p {
     background: white;
     color: #777;
     clear: both;
-    width: 90%;   
+    width: 90%; 
+    height: 40px;  
     padding: 2%;
     margin: 2%;
     text-align: center;
